# pyforgejo

./: .gitignore  README.md  config.yaml  pyproject.toml
api_spec/: openapi.json  swagger.v1.json
pyforgejo/: __init__.py  client.py
pyforgejo/activitypub/: client.py  raw_client.py
pyforgejo/admin/: client.py  raw_client.py
pyforgejo/core/: __init__.py  client_wrapper.py  http_client.py  jsonable_encoder.py  pydantic_utilities.py
pyforgejo/errors/: __init__.py  conflict_error.py  content_too_large_error.py  forbidden_error.py  internal_server_error.py  locked_error.py  method_not_allowed_error.py  not_found_error.py  precondition_failed_error.py  unprocessable_entity_error.py
pyforgejo/issue/: __init__.py  client.py  raw_client.py
pyforgejo/miscellaneous/: client.py  raw_client.py
pyforgejo/notification/: client.py  raw_client.py
pyforgejo/organization/: __init__.py  client.py  raw_client.py
pyforgejo/package/: client.py  raw_client.py
pyforgejo/repository/: __init__.py  client.py  raw_client.py
pyforgejo/types/: __init__.py  access_token.py  action_run.py  activity.py  activity_pub.py  api_invalid_topics_error.py  attachment.py  combined_status.py  contents_response.py  create_repo_option.py  create_wiki_page_options.py  delete_email_option.py  deploy_key.py  file_delete_response.py  file_links_response.py  forge_outbox.py  gpg_key.py  hook.py  issue_form_field.py  issue_labels_option.py  list_action_run_response.py  node_info.py  node_info_usage.py  node_info_usage_users.py  package.py  (+10 more)
tests/: conftest.py  endpoints.py  test_client.py
(+11 files in other folders)
