[project]
name = "pyforgejo"
version = "2.0.0"
description = "A Python client library for accessing the Forgejo API"
authors = [
    {name = "harabat"},
]
readme = "README.md"
packages = [
    {include = "pyforgejo"},
]
license = "MIT"
dependencies = [
    "httpx>=0.20.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.10"

[project.urls]
repository = "https://codeberg.org/harabat/pyforgejo"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["F", "I", "UP"]
line-length = 88
