[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pyforgejo"
version = "2.0.7"
description = "A Python client library for accessing the Forgejo API"
authors = [
    {name = "harabat"},
]
readme = "README.md"
license = "MIT"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.2",
    "pydantic-core>=2.40.0",
    "python-dotenv>=1.1.0",
]
requires-python = ">=3.11"

[project.urls]
repository = "https://codeberg.org/harabat/pyforgejo"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.ruff]
lint.select = ["F", "I", "UP"]
line-length = 88
